// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Me Query Should be able to update profile 1`] = `
Object {
  "updateProfile": Object {
    "__typename": "Profile",
    "firstName": null,
    "id": "MXxwcm9maWxl",
    "lastName": null,
  },
}
`;

exports[`Me Query Should be able to update profile 2`] = `
Object {
  "me": Object {
    "__typename": "User",
    "firstName": "Steve",
    "id": "MXx1c2Vy",
    "lastName": "Kite",
    "name": "Steve Kite",
    Symbol(id): "User:MXx1c2Vy",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`Me Query Should be able to update profile 3`] = `
Object {
  "updateProfile": Object {
    "__typename": "Profile",
    "firstName": null,
    "id": "MXxwcm9maWxl",
    "lastName": null,
  },
}
`;

exports[`Me Query Should preserve old profile info on second createProfile call 1`] = `
Object {
  "createProfile": Object {
    "__typename": "Profile",
    "firstName": "Steve",
    "id": "MXxwcm9maWxl",
    "lastName": "Kite",
  },
}
`;

exports[`Me Query Should preserve old profile info on second createProfile call 2`] = `
Object {
  "me": Object {
    "__typename": "User",
    "firstName": "Steve",
    "id": "MXx1c2Vy",
    "lastName": "Kite",
    "name": "Steve Kite",
    Symbol(id): "User:MXx1c2Vy",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`Me Query Should return null for non-authenticated user 1`] = `
Object {
  "me": null,
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`Me Query Should return profile for user with profile 1`] = `
Object {
  "me": Object {
    "__typename": "User",
    "firstName": "Steve",
    "id": "MXx1c2Vy",
    "lastName": "Kite",
    "name": "Steve Kite",
    Symbol(id): "User:MXx1c2Vy",
  },
  Symbol(id): "ROOT_QUERY",
}
`;
